# l1-egonetics-evolution-cfl

./: .gitignore  CHRONICLE.md  LICENSE  ONTOLOGY-VIEW.md  README.md  mini_dsv4.py  prepare.py  project_config.md  pyproject.toml  train.py  workflow_state.md
.cursor/rules/: frontend-desktop.mdc  frontend-egonetics.mdc  frontend-opencode.mdc  general.mdc  go-ecosystem.mdc  python.mdc  typescript.mdc  workflow-memory.mdc
ecosystem-runtime/: .gitignore  PRD-COVERAGE.md  README.md  SCOPE.md  go.mod
ecosystem-runtime/cmd/evolutionctl/: main.go
ecosystem-runtime/examples/: bootstrap.json
ecosystem-runtime/internal/evo/: cfl_exec.go  common.go  engine.go  engine_test.go  types.go
ecosystem-runtime/scripts/: build.sh
scripts/: run-prepare.sh
