[project]
name = "egonetics-evolution"
version = "0.1.0"
description = "Egonetics Evolution Layer — autonomous LLM training experiments (karpathy autoresearch + DeepSeekV4 MoE)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
]

[project.scripts]
prepare = "prepare:main"
train = "train:main"
dsv4 = "mini_dsv4:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
